# Projectpin

./: README.md
Pinterest Project/Pinterest_Project/: pyproject.toml
Pinterest Project/Pinterest_Project/pinterest_project/board_subsystem/: pin.py
Pinterest Project/Pinterest_Project/pinterest_project/catalog_subsystem/: catalog_interface.py
Pinterest Project/Pinterest_Project/pinterest_project/core_subsystem/: user.py
Pinterest Project/env_pinterest/: pyvenv.cfg
Pinterest_Project/: Makefile  backend.Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
Pinterest_Project/Pinterest_Project/: backend.Dockfile  pyproject.toml
Pinterest_Project/Pinterest_Project/pinterest_project/: main.py
Pinterest_Project/Pinterest_Project/pinterest_project/board_subsystem/: board.py
Pinterest_Project/Pinterest_Project/pinterest_project/product_subsystem/: product.py
Pinterest_Project/pinterest_project/: main.py
Pinterest_Project/pinterest_project/board_subsystem/: __init__.py  board_interface.py  pin.py
Pinterest_Project/pinterest_project/catalog_subsystem/: __init__.py  catalog.py  catalog_interface.py  decorator.py
Pinterest_Project/pinterest_project/core_subsystem/: __init__.py  proxy_catalog.py
Pinterest_Project/pinterest_project/data_base/: __init__.py  base_model.py  data.db  data_base.py  product.py  prueba.py
Pinterest_Project/pinterest_project/database/: basemodel.py  prueba.py  queries.py
Pinterest_Project/pinterest_project/product_subsystem/: __init__.py  product.py  queries.py
Pinterest_Project/tests/test_board_subsystem/: test_pin.py
(+7 files in other folders)
