[tool.poetry]
name = "pinterest-proyect"
version = "0.1.0"
description = ""
authors = ["Edison Alvarez Juan Lozada <edalvarezv@udistrital.edu.co>"]
readme = "README.md"



[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
sqlalchemy = "^2.0.30"
pydantic = "^2.7.3"
click = "^8.1.7"
uvicorn = "^0.30.1"
python-dotenv = "^1.0.1"
psycopg2 = "^2.9.9"
psutil = "^5.9.8"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
black = "^24.4.2"
pylint = "^3.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
